--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,42 @@
-fastapi==0.109.0
-ivicorn[standard]==0.27.0
-pdantic==2.5.3
-supabase==2.3.5
-openai==1.6.1
-langchain==0.1.9
+fastapi==0.104.1
+pydantic==2.6.1
+pydantic-settings==2.1.0
+uvicorn==0.29.0
+supabase==2.4.1
+requests==2.31.0
+cryptography==41.0.7
+warnings==3.7
+
+# Authentication & Security
+pyjwt==2.8.1
+passlib==1.7.4
+secrets==4.1.3
+algorithm==0.1.0
+bcrypt==3.2.0
+pyJWT==2.8.0
+casinos==0.1.27
+
+# Rate Limiting
+slowapi==0.1.9.0
+redis==7.0.0
+
+# Logging & Monitoring
+sentry-sdk==1.40.0
+structlog==24.1.0
 python-dotenv==1.0.0
-httpx==0.25.2
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-pytest==7.4.3
+opentelemetry-api==1.21.0
+opentelemetry-sdk==0.45b
+opentelemetry-exporter-prometheus==0.45b
+
+# IO & Parsing
+pandas==2.0.2
+openpyxl==3.1.0
+validators==0.22.0
+colorama==0.4.4
+click==8.1.7
+tabulate==0.9.9
+
+# Database
+sqlalchemy==2.0.25
+psycopg2-binary==2.9.9
+cx_Oracle==9.0.0
