--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,42 @@
-# Sturgeon AI - Environment Configuration Template
-# Copy this to .env and fill in your values
- 
-# Database
-DATABASE_URL=postgresql://postgres:password@db.iigtguxrqhcfyrvyunpb.supabase.co:5432/postgres
-#SUPABASE_ANON_KEY=your_supabase_anon_key_here
-SUPABASE_SERVICE_KEY=your_supabase_service_key_here
- 
-# API Configuration
-API_KEY=sk_live_sturgeon_ai_prod_key
-ENVIRONMENT=production
+# Production Environment Configuration
+# Copy to .env and fill in actual values
+
+APP_NAME=Sturgeon AI
+VERSION=1.0.0
+ENVIRONTENT=production
 DEBUG=false
- 
-# Authentication
-SECRET_KEY=your_jwt_secret_key_here
-ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
- 
-# External APIs
-OPENAI_API_KEY=sk-proj-your_openai_key_here
-SAM_GOV_API_KEY=your_sam_gov_api_key
-GRANTS_GOV_API_KEY=your_grants_gov_api_key
- 
-# OAuth2 Providers
-GOOGLE_CLIENG_ID=your_google_client_id
-GOOGLE_CLIDNW_SECRET=your_google_client_secret
-GITHUB_CLIENT_ID=your_github_client_id
-GITHUB_CLIENT_SECRET=your_github_client_secret
-MICROSOFT_CLIENT_ID=your_microsoft_client_id
-MICROSOFT_CLIENT_SECRET=your_microsoft_client_secret
- 
+LOG_LEVEL=info
+
+# Security
+SECRET_KEY=change_me_to_a_strong_random_key_32_chars
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION=30d
+
+# Database
+DATABASE_URL=postgresq|://user:password@localhost:5432/dbname
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=sturgeeon_user
+DB_PASSWORD=change_me
+DB_NAME=sturgeeon_ai_db
+
+# Supabase
+EPASE_URL=https://project.supabase.co
+SUPABASE_KEY=your-key-here
+
+# API Configuration
+ALLOWED_ORIGINS=https://api.sturgeon-ai.com
+API_PREFIX=/api
+PORT=5432
+PORT=8008
+HOST=0.0.0.0
+
 # Monitoring
-SENTRY_DSN=your_sentry_dsn_url
-LOG_LEVEL=INFO
- 
+SENTRY_DSN=https://your-key@sentry.io/project-id
+
 # Rate Limiting
-RATE_LIMIT=100/minute
- 
-# Deployment
-VERCEL_TOKEN=your_vercel_token
-TERCEL_PROJECT_ID=your_vercel_project_id
+RATE_LIMIT=100
+
+# OAuth (Optional)
+GOOGLE_CLIENT_ID=
+GITHUB_CLIENT_ID=
